--- a/resources.html
+++ b/resources.html
@@ -1315,7 +1315,7 @@
                             <div class="card">
                                 <p><strong>ML</strong> - Machine Learning</p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/ai-resources/Year 3/Sem 5/Machine_Learning.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1332,7 +1332,7 @@
                                     Python
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/ai-resources/Year 3/Sem 5/DHP.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1346,7 +1346,7 @@
                             <div class="card">
                                 <p><strong>CC</strong> - Cloud Computing</p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/ai-resources/Year 3/Sem 5/Cloud_Computing.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
