added sem 5 all pages

--- a/resources.html
+++ b/resources.html
@@ -1315,7 +1315,7 @@
                             <div class="card">
                                 <p><strong>ML</strong> - Machine Learning</p>
                                 <a
-                                    href="./src/pages/resources/ai-resources/Year 3/Sem 5/Machine_Learning.html"
+                                    href="./src/pages/resources/ai-resources/Year 3/Sem 5/ML.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1346,13 +1346,13 @@
                             <div class="card">
                                 <p><strong>CC</strong> - Cloud Computing</p>
                                 <a
-                                    href="./src/pages/resources/ai-resources/Year 3/Sem 5/Cloud_Computing.html"
+                                    href="./src/pages/resources/ai-resources/Year 3/Sem 5/CC.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
                             </div>
                         </div>
-                        <div
+                        <!-- <div
                             class="subject-card"
                             data-branch="AN"
                             data-year="year3"
@@ -1368,7 +1368,7 @@
                                     >Visit Page</a
                                 >
                             </div>
-                        </div>
+                        </div> -->
                         <div
                             class="subject-card"
                             data-branch="AN"
@@ -1377,7 +1377,7 @@
                             <div class="card">
                                 <p><strong>CN</strong> - Computer Network</p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/ai-resources/Year 3/Sem 5/CN.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1391,7 +1391,7 @@
                             <div class="card">
                                 <p><strong>SMR</strong> - Seminar</p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/ai-resources/Year 3/Sem 5/SMR.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1408,7 +1408,7 @@
                                     and Testing
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/ai-resources/Year 3/Sem 5/SET.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1422,7 +1422,7 @@
                             <div class="card">
                                 <p><strong>BDA</strong> - Big Data Analytics</p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/ai-resources/Year 3/Sem 5/BDA.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1439,7 +1439,7 @@
                                     Warehouse
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/ai-resources/Year 3/Sem 5/DMW.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1456,7 +1456,7 @@
                                     Management System
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/ai-resources/Year 3/Sem 5/ADBMS.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
