--- a/src/pages/resources/ai-resources/Year 3/Sem 5/CC.html
+++ b/src/pages/resources/ai-resources/Year 3/Sem 5/CC.html
@@ -41,15 +41,15 @@
 
         <!-- Main -->
         <div class="breadcrumb">
-            <a href="#">AN</a>
-            <a href="#">3rd Year</a>
-            <a href="#">5th Semester</a>
+            <a href="https://asce-aidias-committee-gpcs.netlify.app/resources?branch=AN">AN</a>
+            <a href="https://asce-aidias-committee-gpcs.netlify.app/resources?branch=AN&year=year3">3rd Year</a>
+            <!-- <a href="#">5th Semester</a> -->
             <a href="#">Cloud Computing</a>
         </div>
 
         <main>
             <img
-                src="images.jpeg"
+                src="../../../../../../public/images/subjects_image_AN/sem 5/cc.jpg"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
