--- a/src/pages/resources/ai-resources/Year 3/Sem 5/SET.html
+++ b/src/pages/resources/ai-resources/Year 3/Sem 5/SET.html
@@ -44,25 +44,25 @@
             <a href="https://asce-aidias-committee-gpcs.netlify.app/resources?branch=AN">AN</a>
             <a href="https://asce-aidias-committee-gpcs.netlify.app/resources?branch=AN&year=year3">3rd Year</a>
             <!-- <a href="#">5th Semester</a> -->
-            <a href="#">Data Handling in Python</a>
+            <a href="#">Software Engineering and Testing</a>
         </div>
 
         <main>
             <img
-                src="../../../../../../public/images/subjects_image_AN/sem 5/dhp.jpg"
+                src="../../../../../../public/images/subjects_image_AN/sem 5/set.jpg"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Data Handling in Python</h1>
+                <h1>Software Engineering and Testing</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">6N406</span>
+                    <span class="tag">6N503</span>
                 </p>
                 <p>
-                   <strong>Type:</strong> <!--  <span class="tag">Lecture</span
-                    >-->
+                   <strong>Type:</strong>  <span class="tag">Lecture</span
+                    >
                     <span class="tag">Practical</span> 
                 </p>
                 <p>
@@ -74,8 +74,9 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Data handling in Python revolves around the use of powerful libraries like Pandas and NumPy. Pandas provide versatile DataFrames, which simplify data manipulation tasks such as cleaning, merging, and filtering datasets. NumPy excels in numerical operations and managing large arrays efficiently. Together, these libraries equip Python with essential tools for effective data analysis and manipulation, making it a go-to language for data scientists and analysts.
+                    Software engineering is the systematic approach to designing, developing, maintaining, and testing software applications. It involves applying engineering principles to ensure that software is reliable, efficient, and meets user requirements. The process typically includes several phases, such as requirement analysis, design, coding, testing, deployment, and maintenance. Key practices in software engineering include version control, code review, and continuous integration to enhance collaboration and code quality.
 
+                    Software testing, a crucial part of software engineering, involves evaluating software applications to ensure they function correctly and meet specified requirements. Testing can be divided into several types, such as unit testing (testing individual components), integration testing (testing combined parts), system testing (testing the entire system), and user acceptance testing (ensuring the software meets user needs). Automated testing tools and frameworks are often used to perform repetitive and complex tests efficiently, helping identify and fix bugs before the software is released.
                 </p>
             </section>
 
@@ -92,17 +93,17 @@
                             <tr>
                                 <th>ESE</th>
                                 <th>PT</th>
-                                <th>ESE #(PR/OR)</th>
+                                <th>ESE @(PR/OR)</th>
                                 <th>PA (TW)</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>00</td>
+                                <td>80</td>
+                                <td>20</td>
                                 <td>00</td>
                                 <td>25</td>
-                                <td>75</td>
-                                <td>100</td>
+                                <td>125</td>
                             </tr>
                         </tbody>
                     </table>
@@ -128,7 +129,7 @@
                                 src="https://drive.google.com/thumbnail?id="
                                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
-                            <p class="pdf-title">Data Handling in Python (6N406)</p>
+                            <p class="pdf-title">Software Engineering and Testing (6N503)</p>
                             <p class="pdf-author">GPCS</p>
                             <a href="https://drive.google.com/uc?export=download&id=" class="download-link"
                                 >Download</a
