--- a/src/pages/resources/ai-resources/Year 3/Sem 5/CN.html
+++ b/src/pages/resources/ai-resources/Year 3/Sem 5/CN.html
@@ -44,29 +44,29 @@
             <a href="https://asce-aidias-committee-gpcs.netlify.app/resources?branch=AN">AN</a>
             <a href="https://asce-aidias-committee-gpcs.netlify.app/resources?branch=AN&year=year3">3rd Year</a>
             <!-- <a href="#">5th Semester</a> -->
-            <a href="#">Data Handling in Python</a>
+            <a href="#">Computer Network</a>
         </div>
 
         <main>
             <img
-                src="../../../../../../public/images/subjects_image_AN/sem 5/dhp.jpg"
+                src="../../../../../../public/images/subjects_image_AN/sem 5/cn.jpg"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Data Handling in Python</h1>
+                <h1>Computer Network</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">6N406</span>
+                    <span class="tag">6N409</span>
                 </p>
                 <p>
-                   <strong>Type:</strong> <!--  <span class="tag">Lecture</span
-                    >-->
+                   <strong>Type:</strong>  <span class="tag">Lecture</span
+                    >
                     <span class="tag">Practical</span> 
                 </p>
                 <p>
-                    <strong>Category:</strong> <span class="tag">Non-Degree</span>
+                    <strong>Category:</strong> <span class="tag">Degree</span>
                 </p>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
@@ -74,8 +74,7 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Data handling in Python revolves around the use of powerful libraries like Pandas and NumPy. Pandas provide versatile DataFrames, which simplify data manipulation tasks such as cleaning, merging, and filtering datasets. NumPy excels in numerical operations and managing large arrays efficiently. Together, these libraries equip Python with essential tools for effective data analysis and manipulation, making it a go-to language for data scientists and analysts.
-
+                    Computer networks are interconnected systems that allow computers and other devices to communicate with each other, enabling the sharing of resources and information. These networks can vary in size and complexity, ranging from small local area networks (LANs) within a single building to vast wide area networks (WANs) that span across countries and even continents. Networks can be wired, using physical cables, or wireless, using radio waves to transmit data. The fundamental components of a computer network include devices such as routers, switches, and hubs, which manage and direct data traffic. The Internet, the most well-known example of a global network, relies on a series of protocols, like TCP/IP, to ensure that data is accurately transmitted and received. Through computer networks, we can access the web, send emails, stream videos, and connect with people worldwide, making them an essential part of modern life.
                 </p>
             </section>
 
@@ -92,17 +91,17 @@
                             <tr>
                                 <th>ESE</th>
                                 <th>PT</th>
-                                <th>ESE #(PR/OR)</th>
+                                <th>ESE #(OR)</th>
                                 <th>PA (TW)</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>00</td>
-                                <td>00</td>
+                                <td>80</td>
+                                <td>20</td>
                                 <td>25</td>
-                                <td>75</td>
-                                <td>100</td>
+                                <td>25</td>
+                                <td>150</td>
                             </tr>
                         </tbody>
                     </table>
@@ -128,7 +127,7 @@
                                 src="https://drive.google.com/thumbnail?id="
                                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
-                            <p class="pdf-title">Data Handling in Python (6N406)</p>
+                            <p class="pdf-title">Computer Network (6N409)</p>
                             <p class="pdf-author">GPCS</p>
                             <a href="https://drive.google.com/uc?export=download&id=" class="download-link"
                                 >Download</a
