--- a/src/pages/resources/ai-resources/Year 3/Sem 5/ML.html
+++ b/src/pages/resources/ai-resources/Year 3/Sem 5/ML.html
@@ -44,37 +44,35 @@
             <a href="https://asce-aidias-committee-gpcs.netlify.app/resources?branch=AN">AN</a>
             <a href="https://asce-aidias-committee-gpcs.netlify.app/resources?branch=AN&year=year3">3rd Year</a>
             <!-- <a href="#">5th Semester</a> -->
-            <a href="#">Data Handling in Python</a>
+            <a href="#">Machine Learning</a>
         </div>
 
         <main>
             <img
-                src="../../../../../../public/images/subjects_image_AN/sem 5/dhp.jpg"
+                src="../../../../../../public/images/subjects_image_AN/sem 5/ml.jpg"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Data Handling in Python</h1>
+                <h1>Machine Learning</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">6N406</span>
+                    <span class="tag">6N502</span>
                 </p>
                 <p>
-                   <strong>Type:</strong> <!--  <span class="tag">Lecture</span
-                    >-->
-                    <span class="tag">Practical</span> 
+                    <strong>Type:</strong> <span class="tag">Lecture</span
+                    ><span class="tag">Practical</span>
                 </p>
                 <p>
-                    <strong>Category:</strong> <span class="tag">Non-Degree</span>
+                    <strong>Category:</strong> <span class="tag">Degree</span>
                 </p>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
 
             <section class="section">
                 <h2>Subject Description</h2>
-                <p>
-                    Data handling in Python revolves around the use of powerful libraries like Pandas and NumPy. Pandas provide versatile DataFrames, which simplify data manipulation tasks such as cleaning, merging, and filtering datasets. NumPy excels in numerical operations and managing large arrays efficiently. Together, these libraries equip Python with essential tools for effective data analysis and manipulation, making it a go-to language for data scientists and analysts.
+                <p>Machine learning, a subset of artificial intelligence, enables computers to learn from data, identify patterns, and make decisions without explicit programming. It encompasses techniques like supervised and unsupervised learning, neural networks, and deep learning, driving advancements in fields such as healthcare, finance, and autonomous vehicles. The future is undoubtedly data-driven!
 
                 </p>
             </section>
@@ -92,17 +90,17 @@
                             <tr>
                                 <th>ESE</th>
                                 <th>PT</th>
-                                <th>ESE #(PR/OR)</th>
+                                <th>ESE #(OR)</th>
                                 <th>PA (TW)</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>00</td>
-                                <td>00</td>
+                                <td>80</td>
+                                <td>20</td>
                                 <td>25</td>
-                                <td>75</td>
-                                <td>100</td>
+                                <td>25</td>
+                                <td>150</td>
                             </tr>
                         </tbody>
                     </table>
@@ -125,12 +123,12 @@
                     <div class="sub-section">
                         <div class="pdf-container">
                             <img
-                                src="https://drive.google.com/thumbnail?id="
+                                src="https://drive.google.com/thumbnail?id=18l1aC6NPzH9-iaOTDO41Gj96_3aXhU6D"
                                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
-                            <p class="pdf-title">Data Handling in Python (6N406)</p>
+                            <p class="pdf-title">Machine Learning (6N502)</p>
                             <p class="pdf-author">GPCS</p>
-                            <a href="https://drive.google.com/uc?export=download&id=" class="download-link"
+                            <a href="https://drive.google.com/uc?export=download&id=18l1aC6NPzH9-iaOTDO41Gj96_3aXhU6D" class="download-link"
                                 >Download</a
                             >
                         </div>
