--- a/src/pages/resources/ai-resources/Year 3/Sem 6/VT.html
+++ b/src/pages/resources/ai-resources/Year 3/Sem 6/VT.html
@@ -41,39 +41,40 @@
 
         <!-- Main -->
         <div class="breadcrumb">
-            <a href="#">AN</a>
-            <a href="#">3rd Year</a>
-            <a href="#">5th Semester</a>
-            <a href="#">Machine Learning</a>
+            <a href="https://asce-aidias-committee-gpcs.netlify.app/resources?branch=AN">AN</a>
+            <a href="https://asce-aidias-committee-gpcs.netlify.app/resources?branch=AN&year=year3">3rd Year</a>
+            <!-- <a href="#">5th Semester</a> -->
+            <a href="#">Vocational Training</a>
         </div>
 
         <main>
             <img
-                src="images.jpeg"
+                src="../../../../../../public/images/subjects_image_AN/sem 6/vt.jpg"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Machine Learning</h1>
+                <h1>Vocational Training</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">6N502</span>
+                    <span class="tag">6S503</span>
                 </p>
                 <p>
-                    <strong>Type:</strong> <span class="tag">Lecture</span
-                    ><span class="tag">Practical</span>
+                   <strong>Type:</strong> <!--  <span class="tag">Lecture</span
+                    > -->
+                    <span class="tag">Practical</span> 
                 </p>
                 <p>
-                    <strong>Category:</strong> <span class="tag">Degree</span>
+                    <strong>Category:</strong> <span class="tag">Non-Degree</span>
                 </p>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
 
             <section class="section">
                 <h2>Subject Description</h2>
-                <p>Machine learning, a subset of artificial intelligence, enables computers to learn from data, identify patterns, and make decisions without explicit programming. It encompasses techniques like supervised and unsupervised learning, neural networks, and deep learning, driving advancements in fields such as healthcare, finance, and autonomous vehicles. The future is undoubtedly data-driven!
-
+                <p>
+                   
                 </p>
             </section>
 
@@ -90,17 +91,17 @@
                             <tr>
                                 <th>ESE</th>
                                 <th>PT</th>
-                                <th>ESE #(OR)</th>
+                                <th>ESE @(OR)</th>
                                 <th>PA (TW)</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>80</td>
-                                <td>20</td>
-                                <td>25</td>
-                                <td>25</td>
-                                <td>150</td>
+                                <td>00</td>
+                                <td>00</td>
+                                <td>50</td>
+                                <td>50</td>
+                                <td>100</td>
                             </tr>
                         </tbody>
                     </table>
@@ -123,12 +124,12 @@
                     <div class="sub-section">
                         <div class="pdf-container">
                             <img
-                                src="https://drive.google.com/thumbnail?id=18l1aC6NPzH9-iaOTDO41Gj96_3aXhU6D"
+                                src="https://drive.google.com/thumbnail?id="
                                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
-                            <p class="pdf-title">Machine Learning (6N502)</p>
+                            <p class="pdf-title">Vocational Training (6S503)</p>
                             <p class="pdf-author">GPCS</p>
-                            <a href="https://drive.google.com/uc?export=download&id=18l1aC6NPzH9-iaOTDO41Gj96_3aXhU6D" class="download-link"
+                            <a href="https://drive.google.com/uc?export=download&id=" class="download-link"
                                 >Download</a
                             >
                         </div>
