co 2nd year page have been completed with 3rd and 4th semister

--- a/src/pages/resources/co-resources/Year 2/sem 3/APD-7G303.html
+++ b/src/pages/resources/co-resources/Year 2/sem 3/APD-7G303.html
@@ -44,28 +44,27 @@
             <a href="#">CO</a>
             <a href="#">2nd Year</a>
             <a href="#">3rd Semester</a>
-            <a href="#">Relational Database Management System</a>
+            <a href="#">Advanced Personality Development</a>
         </div>
 
         <main>
             <img
-                src="https://www.exasol.com/app/uploads/2024/10/thumbnail-blog-what-is-a-relational-database-960x549.webp"
+                src="https://img.freepik.com/premium-vector/capacity-building-growth-mindset-training-put-knowledge-into-brain-businessman-corporate_1162612-1164.jpg?semt=ais_hybrid"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Subject Title</h1>
+                <h1>Advanced Personality Development</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">7R109</span>
+                    <span class="tag">7G303</span>
                 </p>
                 <p>
-                    <strong>Type:</strong> <span class="tag">Lecture</span
-                    >
+                    <strong>Type:</strong><span class="tag">Practical</span>
                 </p>
                 <p>
-                    <strong>Category:</strong> <span class="tag">Degree</span>
+                    <strong>Category:</strong> <span class="tag">Non-Degree</span>
                 </p>
                 <p><strong>Revision:</strong> <span class="tag">7th</span></p>
             </section>
@@ -73,8 +72,7 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Database system can be used as a backend for developing database applications. This course focuses on fundamentals of relational database management system and enables students to design and manage database for various software applications. It
-                    also provides students with theoretical knowledge and practical skills in the use of databases and database management systems.
+                    Advanced Personality Development Course aims to prepare students for the modern challenges they face in their daily lives. Promoting fortitude in the face of failures, Unity amongst family discord, self-discipline amidst distractions and many more priceless lessons. The course focuses on morality and character development at the core of students’ growth, to enable student to become self-aware, sincere, and successful in their many roles - as an ambitious student, reliable employee, caring family member, and considerate citizen.
                 </p>
             </section>
 
@@ -86,25 +84,22 @@
                             <tr>
                                 <th colspan="2">Theory</th>
                                 <th colspan="2">Practical</th>
-                                <th colspan="1">Based On SL</th>
                                 <th rowspan="2">Total</th>
                             </tr>
                             <tr>
-                                <th>FA-TH</th>
-                                <th>SA-TH</th>
+                                <th>ESE</th>
+                                <th>PT</th>
                                 <th>FA-PR</th>
-                                <th>SA-PR # </th>
-                                <th>SLA</th>
+                                <th>SA-PR</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>30</td>
-                                <td>70</td>
-                                <td>50</td>
-                                <td>25</td>
                                 <td>-</td>
-                                <td>175</td>
+                                <td>-</td>
+                                <td>50</td>
+                                <td>-</td>
+                                <td>50</td>
                             </tr>
                         </tbody>
                     </table>
@@ -113,8 +108,7 @@
                     Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
                     Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
                     <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
-                    Test, <b>PA</b>- Progressive Assessment,<b>FA</b>- Formative Assessment, <b>SA</b>- Summative assessment, <b>SLA</b>- Self Learning
-                    Assessment, <b>SL</b>- Self Learning, <b>PR</b>-
+                    Test, <b>PA</b>- Progressive Assessment, <b>SA</b>- Summative assessment, <b>FA</b>- Formative Assessment, <b>PR</b>-
                     Practical Examination, <b>OR</b>– Oral Examination,
                     <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
