--- a/src/pages/resources/co-resources/Year 2/sem 3/OSY-7R113.html
+++ b/src/pages/resources/co-resources/Year 2/sem 3/OSY-7R113.html
@@ -44,27 +44,28 @@
             <a href="#">CO</a>
             <a href="#">2nd Year</a>
             <a href="#">3rd Semester</a>
-            <a href="#">Digital Marketing</a>
+            <a href="#">Operating System</a>
         </div>
 
         <main>
             <img
-                src="https://cms.digitalpolygon.com/sites/default/files/2022-07/Digital-marketing-banner.jpg"
+                src="https://www.trentonsystems.com/hubfs/Operating%20System%20.jpeg"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Subject Title</h1>
+                <h1>Operating System</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">7G705</span>
+                    <span class="tag">7R113</span>
                 </p>
                 <p>
-                    <strong>Type:</strong><span class="tag">Practical</span>
+                    <strong>Type:</strong> <span class="tag">Lecture</span
+                    >
                 </p>
                 <p>
-                    <strong>Category:</strong> <span class="tag">Non-Degree</span>
+                    <strong>Category:</strong> <span class="tag">Degree</span>
                 </p>
                 <p><strong>Revision:</strong> <span class="tag">7th</span></p>
             </section>
@@ -72,7 +73,8 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    This Course intends to develop digital marketing skills in the students, through Marketing Campaigns in digital format and how to apply the tools of Digital Marketing to gain competitive advantage in the Market. The students will analyze consumer buying behavior using Web Analytics and learn how to offer the right products or services to the right customers.
+                    Operating system is the applied level course that makes a computer system operational so as to manage computer resources and to control users and software. This course obtains requisite knowledge about operating system concepts, it drives all the
+                    hardware parts of the computer and is the first piece of software to run on the machine when the system boots. Students will learn process concept, CPU scheduling, Memory Management, Storage Management.
                 </p>
             </section>
 
@@ -84,25 +86,25 @@
                             <tr>
                                 <th colspan="2">Theory</th>
                                 <th colspan="2">Practical</th>
-                                <th colspan ="1">Based On SL</th>
+                                <th colspan="1">Based On SL</th>
                                 <th rowspan="2">Total</th>
                             </tr>
                             <tr>
-                                <th>ESE</th>
-                                <th>PT</th>
-                                <th>FA</th>
-                                <th>SA</th>
+                                <th>FA-TH</th>
+                                <th>SA-TH</th>
+                                <th>FA-PR</th>
+                                <th>SA-PR @ </th>
                                 <th>SLA</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>-</td>
-                                <td>-</td>
+                                <td>30</td>
+                                <td>70</td>
                                 <td>25</td>
                                 <td>-</td>
-                                <td>25</td>  
-                                <td>50</td>
+                                <td>25</td>
+                                <td>150</td>
                             </tr>
                         </tbody>
                     </table>
