--- a/src/pages/resources/co-resources/Year 2/sem 3/OOJ-7R604.html
+++ b/src/pages/resources/co-resources/Year 2/sem 3/OOJ-7R604.html
@@ -44,27 +44,28 @@
             <a href="#">CO</a>
             <a href="#">2nd Year</a>
             <a href="#">3rd Semester</a>
-            <a href="#">Advanced Personality Development</a>
-        </div>
+            <a href="#">Object Oriented Programming Using JAVA</a>
+        </div>>
 
         <main>
             <img
-                src="https://img.freepik.com/premium-vector/capacity-building-growth-mindset-training-put-knowledge-into-brain-businessman-corporate_1162612-1164.jpg?semt=ais_hybrid"
+                src="https://ucscextension-live-28cd95cf77884d15bb06-01c17c1.divio-media.net/images/java-programmin-for-beginner.2e16d0ba.fill-2400x858-c100.jpg"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Subject Title</h1>
+                <h1>Object Oriented Programming Using JAVA</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">7G303</span>
+                    <span class="tag">7R604</span>
                 </p>
                 <p>
-                    <strong>Type:</strong><span class="tag">Practical</span>
+                    <strong>Type:</strong> <span class="tag">Lecture</span
+                    >
                 </p>
                 <p>
-                    <strong>Category:</strong> <span class="tag">Non-Degree</span>
+                    <strong>Category:</strong> <span class="tag">Degree</span>
                 </p>
                 <p><strong>Revision:</strong> <span class="tag">7th</span></p>
             </section>
@@ -72,7 +73,7 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Advanced Personality Development Course aims to prepare students for the modern challenges they face in their daily lives. Promoting fortitude in the face of failures, Unity amongst family discord, self-discipline amidst distractions and many more priceless lessons. The course focuses on morality and character development at the core of students’ growth, to enable student to become self-aware, sincere, and successful in their many roles - as an ambitious student, reliable employee, caring family member, and considerate citizen.
+                    Java programming is applied level course which enhances and refines the object oriented paradigm. Java is rapidly becoming the dominant application development language and system programming language. JAVA being platform independent language and open source software is used to develop business & mobile applications. This course includes OOP concept, multithreading, java database connectivity and applet programming.
                 </p>
             </section>
 
@@ -84,22 +85,25 @@
                             <tr>
                                 <th colspan="2">Theory</th>
                                 <th colspan="2">Practical</th>
+                                <th colspan="1">Based On SL</th>
                                 <th rowspan="2">Total</th>
                             </tr>
                             <tr>
-                                <th>ESE</th>
-                                <th>PT</th>
+                                <th>FA-TH</th>
+                                <th>SA-TH</th>
                                 <th>FA-PR</th>
-                                <th>SA-PR</th>
+                                <th>SA-PR @ </th>
+                                <th>SLA</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>-</td>
-                                <td>-</td>
+                                <td>30</td>
+                                <td>70</td>
                                 <td>50</td>
-                                <td>-</td>
-                                <td>50</td>
+                                <td>25</td>
+                                <td>25</td>
+                                <td>200</td>
                             </tr>
                         </tbody>
                     </table>
@@ -108,7 +112,8 @@
                     Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
                     Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
                     <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
-                    Test, <b>PA</b>- Progressive Assessment, <b>SA</b>- Summative assessment, <b>FA</b>- Formative Assessment, <b>PR</b>-
+                    Test, <b>PA</b>- Progressive Assessment,<b>FA</b>- Formative Assessment, <b>SA</b>- Summative assessment, <b>SLA</b>- Self Learning
+                    Assessment, <b>SL</b>- Self Learning, <b>PR</b>-
                     Practical Examination, <b>OR</b>– Oral Examination,
                     <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
