--- a/src/pages/resources/co-resources/Year 2/sem 3/RDB-7R109.html
+++ b/src/pages/resources/co-resources/Year 2/sem 3/RDB-7R109.html
@@ -44,28 +44,28 @@
             <a href="#">CO</a>
             <a href="#">2nd Year</a>
             <a href="#">3rd Semester</a>
-            <a href="#">Digital Techniques and Microprocessor </a>
+            <a href="#">Relational Database Management System</a>
         </div>
 
         <main>
             <img
-                src="https://img.freepik.com/premium-photo/electronics-engineering-motherboard-digital-data-computer-microprocessor-chip-development-modern-scientific-technology-engineer-data-electronics-science-design_1028938-193713.jpg"
+                src="https://www.exasol.com/app/uploads/2024/10/thumbnail-blog-what-is-a-relational-database-960x549.webp"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Subject Title</h1>
+                <h1>Relational Datatbase Management System</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">7R502</span>
+                    <span class="tag">7R109</span>
                 </p>
                 <p>
                     <strong>Type:</strong> <span class="tag">Lecture</span
                     >
                 </p>
                 <p>
-                    <strong>Category:</strong> <span class="tag">Non-Degree</span>
+                    <strong>Category:</strong> <span class="tag">Degree</span>
                 </p>
                 <p><strong>Revision:</strong> <span class="tag">7th</span></p>
             </section>
@@ -73,9 +73,8 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    It is essential to know fundamentals of digital electronics to understand the concept of microprocessor and .its application. Microprocessor benefits to meet challenges of growing applications of advanced microprocessor based technologies hence students are expected to be conversant with components of microprocessors and
-microprocessor based programming. This course is designed to help the students to design logic circuits and to
-understand the architecture of 8086 microprocessor. The course also enables students to develop assembly language programs using instruction set of 8086 Microprocessor.
+                    Database system can be used as a backend for developing database applications. This course focuses on fundamentals of relational database management system and enables students to design and manage database for various software applications. It
+                    also provides students with theoretical knowledge and practical skills in the use of databases and database management systems.
                 </p>
             </section>
 
@@ -94,7 +93,7 @@ understand the architecture of 8086 microprocessor. The course also enables stud
                                 <th>FA-TH</th>
                                 <th>SA-TH</th>
                                 <th>FA-PR</th>
-                                <th>SA-PR @ </th>
+                                <th>SA-PR # </th>
                                 <th>SLA</th>
                             </tr>
                         </thead>
@@ -102,9 +101,9 @@ understand the architecture of 8086 microprocessor. The course also enables stud
                             <tr>
                                 <td>30</td>
                                 <td>70</td>
+                                <td>50</td>
                                 <td>25</td>
-                                <td>25</td>
-                                <td>25</td>
+                                <td>-</td>
                                 <td>175</td>
                             </tr>
                         </tbody>
