images have been added into the images folder for statically getting the images on the pages

--- a/src/pages/resources/co-resources/Year 2/sem 3/RDB-7R109.html
+++ b/src/pages/resources/co-resources/Year 2/sem 3/RDB-7R109.html
@@ -49,7 +49,7 @@
 
         <main>
             <img
-                src="https://www.exasol.com/app/uploads/2024/10/thumbnail-blog-what-is-a-relational-database-960x549.webp"
+                src="../../../../../../public/images/subjects_image/3rd sem/rdb.webp"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
