--- a/src/pages/resources/co-resources/Year 2/sem 3/APD-7G303.html
+++ b/src/pages/resources/co-resources/Year 2/sem 3/APD-7G303.html
@@ -49,7 +49,7 @@
 
         <main>
             <img
-                src="https://img.freepik.com/premium-vector/capacity-building-growth-mindset-training-put-knowledge-into-brain-businessman-corporate_1162612-1164.jpg?semt=ais_hybrid"
+                src="../../../../../../public/images/subjects_image/3rd sem/apd.avif"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
