--- a/src/pages/resources/co-resources/Year 2/sem 3/DMK-7G705.html
+++ b/src/pages/resources/co-resources/Year 2/sem 3/DMK-7G705.html
@@ -49,7 +49,7 @@
 
         <main>
             <img
-                src="https://cms.digitalpolygon.com/sites/default/files/2022-07/Digital-marketing-banner.jpg"
+                src="../../../../../../public/images/subjects_image/3rd sem/dmk.jpg"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
