--- a/src/pages/resources/co-resources/Year 2/sem 3/DTM-7R502.html
+++ b/src/pages/resources/co-resources/Year 2/sem 3/DTM-7R502.html
@@ -49,7 +49,7 @@
 
         <main>
             <img
-                src="https://img.freepik.com/premium-photo/electronics-engineering-motherboard-digital-data-computer-microprocessor-chip-development-modern-scientific-technology-engineer-data-electronics-science-design_1028938-193713.jpg"
+                src="../../../../../../public/images/subjects_image/3rd sem/dtm.avif"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
