--- a/src/pages/resources/co-resources/Year 2/sem 3/OOJ-7R604.html
+++ b/src/pages/resources/co-resources/Year 2/sem 3/OOJ-7R604.html
@@ -49,7 +49,7 @@
 
         <main>
             <img
-                src="https://ucscextension-live-28cd95cf77884d15bb06-01c17c1.divio-media.net/images/java-programmin-for-beginner.2e16d0ba.fill-2400x858-c100.jpg"
+                src="../../../../../../public/images/subjects_image/3rd sem/ooj.jpg"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
