--- a/src/pages/resources/co-resources/Year 2/sem 3/OSY-7R113.html
+++ b/src/pages/resources/co-resources/Year 2/sem 3/OSY-7R113.html
@@ -49,7 +49,7 @@
 
         <main>
             <img
-                src="https://www.trentonsystems.com/hubfs/Operating%20System%20.jpeg"
+                src="../../../../../../public/images/subjects_image/3rd sem/osy.webp"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
