--- a/src/pages/resources/co-resources/Year 2/sem 4/CC-7R201.html
+++ b/src/pages/resources/co-resources/Year 2/sem 4/CC-7R201.html
@@ -49,7 +49,7 @@
 
         <main>
             <img
-                src="https://www.eidosmedia.com/resources/028f-1b5fb6be1a1f-ccb088c39658-1000/format/large/eidosmedia-cloud2.png"
+                src="../../../../../../public/images/subjects_image/4th sem/cc.png"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
