--- a/src/pages/resources/co-resources/Year 2/sem 4/CGR-7P102.html
+++ b/src/pages/resources/co-resources/Year 2/sem 4/CGR-7P102.html
@@ -49,7 +49,7 @@
 
         <main>
             <img
-                src="https://c4.wallpaperflare.com/wallpaper/596/57/130/iron-man-wallpaper-preview.jpg"
+                src="../../../../../../public/images/subjects_image/4th sem/cgr.jpg"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
