--- a/src/pages/resources/co-resources/Year 2/sem 4/CN-7P101.html
+++ b/src/pages/resources/co-resources/Year 2/sem 4/CN-7P101.html
@@ -49,7 +49,7 @@
 
         <main>
             <img
-                src="https://em360tech.com/sites/default/files/inline-images/types-of-computer-networks.jpeg"
+                src="../../../../../../public/images/subjects_image/4th sem/cn.webp"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
