--- a/src/pages/resources/co-resources/Year 2/sem 4/SEN-7R110.html
+++ b/src/pages/resources/co-resources/Year 2/sem 4/SEN-7R110.html
@@ -49,7 +49,7 @@
 
         <main>
             <img
-                src="https://media.licdn.com/dms/image/v2/D4E12AQEnNKiiNUKz9Q/article-cover_image-shrink_720_1280/article-cover_image-shrink_720_1280/0/1693476739453?e=2147483647&v=beta&t=GJFkWsA-sWUOFI02Aied_XdQ1bALhfLS8j_rzNl-ZMQ"
+                src="../../../../../../public/images/subjects_image/4th sem/sen.jpeg"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
