Update 3rd year section: replaced old images with new ones, modified 5th & 6th sem content, and moved images to local resources for static storage.

--- a/src/pages/resources/co-resources/Year 3/sem 5/CC_6P407.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/CC_6P407.html
@@ -44,12 +44,12 @@
             <a href="#">CO</a>
             <a href="#">3rd Year</a>
             <a href="#">5th Semester</a>
-            <a href="#">Machine Learning</a>
+            <a href="#">Cloud Computing</a>
         </div>
 
         <main>
             <img
-                src="../../../../../../public/images/subjects_image/5th sem/cc.webp"
+                src="../../../../../../public/images/subjects_image/5th sem/cc.png"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
