--- a/src/pages/resources/co-resources/Year 3/sem 5/LPL_6P404.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/LPL_6P404.html
@@ -44,7 +44,7 @@
             <a href="#">CO</a>
             <a href="#">3rd Year</a>
             <a href="#">5th Semester</a>
-            <a href="#">Machine Learning</a>
+            <a href="#">Linux Programming Lab</a>
         </div>
 
         <main>
