--- a/src/pages/resources/co-resources/Year 3/sem 5/dwm_6P406.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/dwm_6P406.html
@@ -44,7 +44,7 @@
             <a href="#">CO</a>
             <a href="#">3rd Year</a>
             <a href="#">5th Semester</a>
-            <a href="#">Machine Learning</a>
+            <a href="#">Data Wearhousing and Mining</a>
         </div>
 
         <main>
@@ -55,7 +55,7 @@
                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Data Warehousing and mining</h1>
+                <h1>Data Warehousing and Mining</h1>
                 <p>
                     <strong>Subject Code:</strong>
                     <span class="tag">6P406</span>
