--- a/src/pages/resources/co-resources/Year 3/sem6/edp_6G306.html
+++ b/src/pages/resources/co-resources/Year 3/sem6/edp_6G306.html
@@ -43,13 +43,13 @@
         <div class="breadcrumb">
             <a href="#">CO</a>
             <a href="#">3rd Year</a>
-            <a href="#">5th Semester</a>
-            <a href="#">Machine Learning</a>
+            <a href="#">6th Semester</a>
+            <a href="#">Entrepreneurship Development</a>
         </div>
 
         <main>
             <img
-                src="../../../../../../public/images/subjects_image/6th sem/edp.webp"
+                src="../../../../../../public/images/subjects_image/6th sem/gif-4mb.gif"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
