--- a/src/pages/resources/co-resources/Year 3/sem 5/AMM_6P401.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/AMM_6P401.html
@@ -44,12 +44,12 @@
             <a href="#">CO</a>
             <a href="#">3rd Year</a>
             <a href="#">5th Semester</a>
-            <a href="#">Machine Learning</a>
+            <a href="#">Advanced Microprocessor and Microcontroller</a>
         </div>
 
         <main>
             <img
-                src="../../../../../../public/images/subjects_image/5th sem/amm.webp"
+                src="../../../../../../public/images/subjects_image/5th sem/amm.avif"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
