--- a/src/pages/resources/co-resources/Year 3/sem6/AJp_6S504.html
+++ b/src/pages/resources/co-resources/Year 3/sem6/AJp_6S504.html
@@ -43,8 +43,8 @@
         <div class="breadcrumb">
             <a href="#">CO</a>
             <a href="#">3rd Year</a>
-            <a href="#">5th Semester</a>
-            <a href="#">Machine Learning</a>
+            <a href="#">6th Semester</a>
+            <a href="#">Advanced Java Programming</a>
         </div>
 
         <main>
